organização do site

--- a/src/pages/depoimentos.html
+++ b/src/pages/depoimentos.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Depoimentos</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
+            <ul>                                 
                 <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
@@ -19,24 +19,18 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
+        <h1>Depoimentos</h1>
+        <section class="testimonial">
+            <h2>Depoimento de Maria</h2>
+            <blockquote>"Graças à Orange Fitness, transformei minha vida. Perdi peso, ganhei confiança e me sinto mais saudável do que nunca. Os instrutores são incríveis!"</blockquote>
         </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
+        <section class="testimonial">
+            <h2>Depoimento de João</h2>
+            <blockquote>"Malhar na Orange Fitness tem sido uma jornada incrível. Sinto-me mais forte e com mais energia. Não poderia estar mais feliz com os resultados!"</blockquote>
         </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+        <section class="testimonial">
+            <h2>Depoimento de Ana</h2>
+            <blockquote>"A Orange Fitness é mais do que um lugar para se exercitar. É uma comunidade de pessoas dedicadas à saúde e ao bem-estar. Sinto-me em casa aqui."</blockquote>
         </section>
     </main>
     <footer>
@@ -81,7 +75,7 @@
         </section>
         <p>&copy; 2023 Orange Fitness</p>
        
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+    </footer>
+    <script src="./script.js"></script>
 </body>
 </html>
