--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Perguntas Frequentes (FAQ)</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
+            <ul>                                 
                 <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
@@ -19,24 +19,20 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
-        </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
-        </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+        <h1>Perguntas Frequentes (FAQ)</h1>
+        <section class="faq">
+            <h2>Perguntas Frequentes</h2>
+            <h3>Como faço para me inscrever na academia?</h3>
+            <p>Você pode se inscrever pessoalmente em nossa recepção ou preenchendo o formulário de inscrição online em nosso site.</p>
+
+            <h3>Quais são os preços das assinaturas mensais?</h3>
+            <p>Nossos preços variam dependendo do plano escolhido. Para obter informações detalhadas sobre preços, entre em contato com nossa equipe.</p>
+
+            <h3>Qual é a política de cancelamento?</h3>
+            <p>Você pode cancelar sua assinatura a qualquer momento, mas é necessário um aviso prévio de 30 dias. Entre em contato conosco para obter mais detalhes.</p>
+
+            <h3>Quais programas de treinamento estão disponíveis?</h3>
+            <p>Oferecemos uma variedade de programas, incluindo musculação, aulas de grupo, ioga, e muito mais. Consulte a seção "Programas e Serviços" para obter mais informações.</p>
         </section>
     </main>
     <footer>
@@ -79,9 +75,8 @@
                 </ul>
             </div>
         </section>
-        <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+        <p>&copy; 2023 Orange Fitness</p>       
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
