--- a/src/pages/galeria.html
+++ b/src/pages/galeria.html
@@ -3,40 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Galeria de Fotos</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
-                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
+            <ul>                                 
+                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>           
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
                 <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
-        </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
-        </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+         <h1>Galeria de Fotos</h1>
+        <section class="photo-gallery">
+            <h2>Fotos da Academia</h2>
+            <div class="gallery-item">
+                <img src="academia1.jpg" alt="Academia Fitness - Equipamentos">
+                <p>Equipamentos de última geração</p>
+            </div>
+            <div class="gallery-item">
+                <img src="academia2.jpg" alt="Academia Fitness - Aulas de Grupo">
+                <p>Aulas de grupo dinâmicas</p>
+            </div>
+            <div class="gallery-item">
+                <img src="academia3.jpg" alt="Academia Fitness - Área de Musculação">
+                <p>Área de musculação espaçosa</p>
+            </div>
+            <div class="gallery-item">
+                <img src="academia4.jpg" alt="Academia Fitness - Membros Satisfeitos">
+                <p>Nossos membros satisfeitos</p>
+            </div>
         </section>
     </main>
     <footer>
@@ -79,9 +79,8 @@
                 </ul>
             </div>
         </section>
-        <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+        <p>&copy; 2023 Orange Fitness</p>       
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
