--- a/src/pages/horario.html
+++ b/src/pages/horario.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Horário de Aulas</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
-                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
+            <ul>                                 
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
                 <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
@@ -19,24 +18,36 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
-        </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
-        </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+        <h1>Horário de Aulas</h1>
+        <section class="class-schedule">
+            <h2>Horário de Aulas</h2>
+            <p>Confira nosso horário de aulas e treinamentos para planejar suas visitas à academia:</p>
+            <table>
+                <tr>
+                    <th>Segunda-feira</th>
+                    <td>Aulas de Grupo: 10h - 11h30</td>
+                </tr>
+                <tr>
+                    <th>Terça-feira</th>
+                    <td>Yoga: 18h - 19h30</td>
+                </tr>
+                <tr>
+                    <th>Quarta-feira</th>
+                    <td>Musculação: 8h - 21h</td>
+                </tr>
+                <tr>
+                    <th>Quinta-feira</th>
+                    <td>Aulas de Grupo: 9h - 10h30</td>
+                </tr>
+                <tr>
+                    <th>Sexta-feira</th>
+                    <td>Musculação: 7h - 20h</td>
+                </tr>
+                <tr>
+                    <th>Sábado</th>
+                    <td>Yoga: 10h - 11h30</td>
+                </tr>
+            </table>
         </section>
     </main>
     <footer>
@@ -79,9 +90,8 @@
                 </ul>
             </div>
         </section>
-        <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+        <p>&copy; 2023 Orange Fitness</p>       
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
