--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Sobre a Academia</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
+            <ul>                                 
                 <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
@@ -19,24 +19,27 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
+        <h1>Sobre a Academia</h1>
         <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
+            <h2>História</h2>
+            <p>Nossa academia foi fundada em 1990 e desde então tem sido um local de referência para aqueles que buscam qualidade de vida e condicionamento físico.</p>
         </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
+        <section class="mission">
+            <h2>Missão</h2>
+            <p>Nossa missão é inspirar e capacitar as pessoas a viverem vidas mais saudáveis e felizes, fornecendo os recursos e o apoio necessários para atingir seus objetivos de fitness.</p>
         </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
+        <section class="vision">
+            <h2>Visão</h2>
+            <p>Nossa visão é ser a academia líder na promoção de um estilo de vida saudável e ativo em nossa comunidade, oferecendo programas de treinamento excepcionais e instalações de primeira classe.</p>
         </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+        <section class="values">
+            <h2>Valores</h2>
+            <ul>
+                <li>Compromisso com a excelência</li>
+                <li>Respeito e inclusão</li>
+                <li>Inovação constante</li>
+                <li>Atendimento ao cliente de primeira classe</li>
+            </ul>
         </section>
     </main>
     <footer>
@@ -79,9 +82,8 @@
                 </ul>
             </div>
         </section>
-        <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+        <p>&copy; 2023 Orange Fitness</p>       
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
