--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Blog e Notícias</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
+            <ul>                                 
                 <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
@@ -19,25 +19,22 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
-        </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
-        </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
-        </section>
+        <h1>Blog e Notícias</h1>
+        <article class="blog-post">
+            <h2>Dicas para uma Alimentação Saudável</h2>
+            <p>Confira algumas dicas para manter uma alimentação saudável e equilibrada, essencial para alcançar seus objetivos de fitness.</p>
+            <p><a href="post1.html">Leia mais</a></p>
+        </article>
+        <article class="blog-post">
+            <h2>Benefícios do Treinamento de Força</h2>
+            <p>Descubra os benefícios do treinamento de força para a saúde e a forma física, e como incluí-lo em sua rotina de exercícios.</p>
+            <p><a href="post2.html">Leia mais</a></p>
+        </article>
+        <article class="blog-post">
+            <h2>Receita Saudável: Smoothie de Frutas</h2>
+            <p>Aprenda a preparar um delicioso smoothie de frutas que fornece os nutrientes necessários para um dia cheio de energia.</p>
+            <p><a href="post3.html">Leia mais</a></p>
+        </article>
     </main>
     <footer>
         <section>
@@ -81,7 +78,7 @@
         </section>
         <p>&copy; 2023 Orange Fitness</p>
        
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+    </footer>   
+    <script src="../JS/script.js"></script>
 </body>
 </html>
