--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Contato</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
+            <ul>                                 
                 <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
@@ -19,24 +19,30 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
+        <h1>Contato</h1>
+        <section class="contact-info">
+            <h2>Informações de Contato</h2>
+            <p>Telefone: (123) 456-7890</p>
+            <p>E-mail: contato@orangefitness.com</p>
         </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
+        <section class="contact-form">
+            <h2>Formulário de Contato</h2>
+            <form>
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required>
+
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="mensagem">Mensagem:</label>
+                <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+
+                <button type="submit">Enviar Mensagem</button>
+            </form>
         </section>
-        <section class="location">
+        <section class="map">
             <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.6789!2d-12.3456789!3d34.5678901!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDQ4JzQ0LjAiUyAxMzIsNDAuMyJF!5e0!3m2!1sen!2sus!4v1569921707431!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </section>
     </main>
     <footer>
@@ -79,9 +85,8 @@
                 </ul>
             </div>
         </section>
-        <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+        <p>&copy; 2023 Orange Fitness</p>       
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
