--- a/src/pages/membros.html
+++ b/src/pages/membros.html
@@ -3,40 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Área de Membros</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
-        <nav>
-            <ul>               
-                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
-                <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
-            </ul>
-        </nav>
+        <header>
+            <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+            <nav>
+                <ul>                                 
+                    <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
+                    <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                      
+                    <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
+                </ul>
+            </nav>
+        </header>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
+        <h1>Área de Membros</h1>
+        <section class="member-features">
+            <h2>Recursos para Membros</h2>
+            <ul>
+                <li>Agendamento de aulas online</li>
+                <li>Acompanhamento do progresso</li>
+                <li>Dicas exclusivas de treinamento</li>
+            </ul>
         </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
-        </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+        <section class="member-login">
+            <h2>Login de Membros</h2>
+            <p>Seja bem-vindo à nossa Área de Membros. Faça o login para acessar recursos exclusivos:</p>
+            <form>
+                <label for="username">Nome de Usuário:</label>
+                <input type="text" id="username" name="username" required>
+
+                <label for="password">Senha:</label>
+                <input type="password" id="password" name="password" required>
+
+                <button type="submit">Login</button>
+            </form>
         </section>
     </main>
     <footer>
@@ -81,7 +85,7 @@
         </section>
         <p>&copy; 2023 Orange Fitness</p>
        
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
