--- a/src/pages/programas.html
+++ b/src/pages/programas.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Programas e Serviços</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>               
+            <ul>                                 
                 <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
                 <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
@@ -19,24 +19,24 @@
         </nav>
     </header>
     <main>
-        <h1>Bem-vindo à Orange Fitness</h1>
-        <section class="about">
-            <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
+        <h1>Programas e Serviços</h1>
+        <section class="program">
+            <h2>Musculação</h2>
+            <p>Aproveite nossa academia de última geração com uma variedade de equipamentos de musculação. Nossos instrutores certificados estão à disposição para ajudá-lo a atingir seus objetivos.</p>
+            <p>Horários:<br>Segunda a Sexta: 6h - 22h<br>Sábado: 8h - 18h</p>
+            <p>Preços: A partir de R$50/mês</p>
         </section>
-        <section class="hours">
-            <h2>Horário de Funcionamento</h2>
-            <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
+        <section class="group-classes">
+            <h2>Aulas de Grupo</h2>
+            <p>Oferecemos uma variedade de aulas de grupo, incluindo spinning, zumba, pilates e muito mais. Nossos instrutores especializados garantem que você tenha uma experiência divertida e eficaz.</p>
+            <p>Horários:<br>Consulte o nosso calendário para os horários das aulas.</p>
+            <p>Preços: Incluído na assinatura mensal</p>
         </section>
-        <section class="location">
-            <h2>Localização</h2>
-            <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
-        </section>
-        <section class="image">
-            <img src="academia.jpg" alt="Orange Fitness">
+        <section class="yoga">
+            <h2>Yoga</h2>
+            <p>Descubra os benefícios do yoga para o corpo e a mente. Nossas aulas de yoga são adequadas para todos os níveis, desde iniciantes até avançados.</p>
+            <p>Horários:<br>Terça e Quinta: 18h - 19h30<br>Sábado: 10h - 11h30</p>
+            <p>Preços: A partir de R$30/aula</p>
         </section>
     </main>
     <footer>
@@ -79,9 +79,8 @@
                 </ul>
             </div>
         </section>
-        <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
-    <script src="./src/JS/script.js"></script>
+        <p>&copy; 2023 Orange Fitness</p>       
+    </footer>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
