--- a/src/pages/faleConosco.html
+++ b/src/pages/faleConosco.html
@@ -1,68 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fale Conosco</title>
-  <link rel="stylesheet" href="../CSS/style.css">
-</head>
-<body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fale Conosco</title>
+    <link rel="stylesheet" href="../CSS/style.css" />
+  </head>
+  <body>
     <header>
-        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
-        <nav>
-            <ul>                                 
-                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
-                <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="" alt="logo tipo da empresa" /></a>
+      <nav>
+        <ul>
+          <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
+          <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>
+          <li><a href="./src/pages/membros.html">Área de Membros</a></li>
+          <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
+        </ul>
+      </nav>
     </header>
-  <main>
-
-  </main>
-  <footer>
-    <section>
-        <img src="" alt="logotipo da academia">
-    </section>
-    <section>
+    <main>
+      <h1>Fale Conosco</h1>
+      <form action="processar_formulario.php" method="post">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required />
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required />
+        <label for="assunto">Assunto:</label>
+        <input type="text" id="assunto" name="assunto" required />
+        <label for="mensagem">Mensagem:</label>
+        <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+        <input type="submit" value="Enviar" />
+      </form>
+    </main>
+    <footer>
+      <section>
+        <img src="" alt="logotipo da academia" />
+      </section>
+      <section>
         <h2>Siga a Orange Fitness</h2>
         <ul class="social-links">
-            <li><a href="https://www.facebook.com/orangefitness" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-            <li> <a href="https://www.instagram.comorangefitness" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-            <li><a href="https://www.twitter.com/orangefitness" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-            <li> <a href="https://www.linkedin.com/company/orangefitness" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+          <li>
+            <a
+              href="https://www.facebook.com/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.comorangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.twitter.com/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/company/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
+            >
+          </li>
         </ul>
-    </section>
-    <section>
+      </section>
+      <section>
         <div>
-            <h2>Institucional</h2>
-            <ul>
-                <li><a href="./src/pages/sobre.html">Sobre a Academia</a></li>
-                <li><a href="./src/pages/termos.html">Termos de Uso</a></li>
-                <li><a href="./src/pages/politicas.html">Política de Privacidade</a></li>
-                <li><a href="./src/pages/faleConosco.html"></a></li>
-                <li><a href="./src/pages/faq.html">Perguntas Frequentes</a></li>
-            </ul>
+          <h2>Institucional</h2>
+          <ul>
+            <li><a href="./src/pages/sobre.html">Sobre a Academia</a></li>
+            <li><a href="./src/pages/termos.html">Termos de Uso</a></li>
+            <li>
+              <a href="./src/pages/politicas.html">Política de Privacidade</a>
+            </li>
+            <li><a href="./src/pages/faleConosco.html"></a></li>
+            <li><a href="./src/pages/faq.html">Perguntas Frequentes</a></li>
+          </ul>
         </div>
         <div>
-            <h2>Planos</h2>
-            <ul>
-                <li><a href="./src/pages/programas.html">Programas e Serviços</a></li>
-                <li><a href="./src/pages/inscricao.html">Matrícula</a></li>
-                <li><a href="./src/pages/contato.html">Contatos</a></li>
-            </ul>
+          <h2>Planos</h2>
+          <ul>
+            <li>
+              <a href="./src/pages/programas.html">Programas e Serviços</a>
+            </li>
+            <li><a href="./src/pages/inscricao.html">Matrícula</a></li>
+            <li><a href="./src/pages/contato.html">Contatos</a></li>
+          </ul>
         </div>
         <div>
-            <h2>Corporativo</h2>
-            <ul>
-                <li><a href="./src/pages/blog.html">Blog e Notícias</a></li>
-                <li><a href="./src/pages/depoimentos.html">Depoimentos</a></li>
-            </ul>
+          <h2>Corporativo</h2>
+          <ul>
+            <li><a href="./src/pages/blog.html">Blog e Notícias</a></li>
+            <li><a href="./src/pages/depoimentos.html">Depoimentos</a></li>
+          </ul>
         </div>
-    </section>
-    <p>&copy; 2023 Orange Fitness</p>   
-</footer>
-<script src="../JS/script.js"></script>
-</body>
+      </section>
+      <p>&copy; 2023 Orange Fitness</p>
+    </footer>
+    <script src="../JS/script.js"></script>
+  </body>
 </html>
