--- a/src/pages/horario.html
+++ b/src/pages/horario.html
@@ -1,97 +1,132 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horário de Aulas</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../CSS/style.css" />
+  </head>
+  <body>
     <header>
-        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
-        <nav>
-            <ul>                                 
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
-                <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="" alt="logo tipo da empresa" /></a>
+      <nav>
+        <ul>
+          <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>
+          <li><a href="./src/pages/membros.html">Área de Membros</a></li>
+          <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <h1>Horário de Aulas</h1>
-        <section class="class-schedule">
-            <h2>Horário de Aulas</h2>
-            <p>Confira nosso horário de aulas e treinamentos para planejar suas visitas à academia:</p>
-            <table>
-                <tr>
-                    <th>Segunda-feira</th>
-                    <td>Aulas de Grupo: 10h - 11h30</td>
-                </tr>
-                <tr>
-                    <th>Terça-feira</th>
-                    <td>Yoga: 18h - 19h30</td>
-                </tr>
-                <tr>
-                    <th>Quarta-feira</th>
-                    <td>Musculação: 8h - 21h</td>
-                </tr>
-                <tr>
-                    <th>Quinta-feira</th>
-                    <td>Aulas de Grupo: 9h - 10h30</td>
-                </tr>
-                <tr>
-                    <th>Sexta-feira</th>
-                    <td>Musculação: 7h - 20h</td>
-                </tr>
-                <tr>
-                    <th>Sábado</th>
-                    <td>Yoga: 10h - 11h30</td>
-                </tr>
-            </table>
-        </section>
+      <h1>Horário de Aulas</h1>
+      <section class="class-schedule">
+        <h2>Horário de Aulas</h2>
+        <p>
+          Confira nosso horário de aulas e treinamentos para planejar suas
+          visitas à academia:
+        </p>
+        <table>
+          <tr>
+            <th>Segunda-feira</th>
+            <td>Aulas de Grupo: 10h - 11h30</td>
+          </tr>
+          <tr>
+            <th>Terça-feira</th>
+            <td>Yoga: 18h - 19h30</td>
+          </tr>
+          <tr>
+            <th>Quarta-feira</th>
+            <td>Musculação: 8h - 21h</td>
+          </tr>
+          <tr>
+            <th>Quinta-feira</th>
+            <td>Aulas de Grupo: 9h - 10h30</td>
+          </tr>
+          <tr>
+            <th>Sexta-feira</th>
+            <td>Musculação: 7h - 20h</td>
+          </tr>
+          <tr>
+            <th>Sábado</th>
+            <td>Yoga: 10h - 11h30</td>
+          </tr>
+        </table>
+      </section>
     </main>
     <footer>
-        <section>
-            <img src="" alt="logotipo da academia">
-        </section>
-        <section>
-            <h2>Siga a Orange Fitness</h2>
-            <ul class="social-links">
-                <li><a href="https://www.facebook.com/orangefitness" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                <li> <a href="https://www.instagram.comorangefitness" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="https://www.twitter.com/orangefitness" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-                <li> <a href="https://www.linkedin.com/company/orangefitness" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-            </ul>
-        </section>
-        <section>
-            <div>
-                <h2>Institucional</h2>
-                <ul>
-                    <li><a href="./src/pages/sobre.html">Sobre a Academia</a></li>
-                    <li><a href="./src/pages/termos.html">Termos de Uso</a></li>
-                    <li><a href="./src/pages/politicas.html">Política de Privacidade</a></li>
-                    <li><a href="./src/pages/faleConosco.html"></a></li>
-                    <li><a href="./src/pages/faq.html">Perguntas Frequentes</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Planos</h2>
-                <ul>
-                    <li><a href="./src/pages/programas.html">Programas e Serviços</a></li>
-                    <li><a href="./src/pages/inscricao.html">Matrícula</a></li>
-                    <li><a href="./src/pages/contato.html">Contatos</a></li>
-                </ul>
-            </div>
-            <div>
-                <h2>Corporativo</h2>
-                <ul>
-                    <li><a href="./src/pages/blog.html">Blog e Notícias</a></li>
-                    <li><a href="./src/pages/depoimentos.html">Depoimentos</a></li>
-                </ul>
-            </div>
-        </section>
-        <p>&copy; 2023 Orange Fitness</p>       
+      <section>
+        <img src="" alt="logotipo da academia" />
+      </section>
+      <section>
+        <h2>Siga a Orange Fitness</h2>
+        <ul class="social-links">
+          <li>
+            <a
+              href="https://www.facebook.com/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.comorangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.twitter.com/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/company/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </section>
+      <section>
+        <div>
+          <h2>Institucional</h2>
+          <ul>
+            <li><a href="./src/pages/sobre.html">Sobre a Academia</a></li>
+            <li><a href="./src/pages/termos.html">Termos de Uso</a></li>
+            <li>
+              <a href="./src/pages/politicas.html">Política de Privacidade</a>
+            </li>
+            <li><a href="./src/pages/faleConosco.html"></a></li>
+            <li><a href="./src/pages/faq.html">Perguntas Frequentes</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Planos</h2>
+          <ul>
+            <li>
+              <a href="./src/pages/programas.html">Programas e Serviços</a>
+            </li>
+            <li><a href="./src/pages/inscricao.html">Matrícula</a></li>
+            <li><a href="./src/pages/contato.html">Contatos</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Corporativo</h2>
+          <ul>
+            <li><a href="./src/pages/blog.html">Blog e Notícias</a></li>
+            <li><a href="./src/pages/depoimentos.html">Depoimentos</a></li>
+          </ul>
+        </div>
+      </section>
+      <p>&copy; 2023 Orange Fitness</p>
     </footer>
     <script src="../JS/script.js"></script>
-</body>
+  </body>
 </html>
