--- a/src/pages/politicas.html
+++ b/src/pages/politicas.html
@@ -1,68 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Politica de Privacidade</title>
-  <link rel="stylesheet" href="../CSS/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Política de Privacidade - Orange Fitness</title>
+    <link rel="stylesheet" href="../CSS/style.css" />
+  </head>
+  <body>
     <header>
-        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
-        <nav>
-            <ul>                                 
-                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
-                <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
-            </ul>
-        </nav>
+      <a href="../../index.html"><img src="" alt="logo tipo da empresa" /></a>
+      <nav>
+        <ul>
+          <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
+          <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>
+          <li><a href="./src/pages/membros.html">Área de Membros</a></li>
+          <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
+        </ul>
+      </nav>
     </header>
-  <main>
+    <main>
+      <h1>Política de Privacidade</h1>
+      <p>
+        Esta Política de Privacidade descreve como o Orange Fitness coleta, usa
+        e protege as informações pessoais dos usuários do nosso site. Ao usar
+        este site, você concorda com as práticas descritas nesta política.
+      </p>
+      <h2>Informações Coletadas</h2>
+      <p>O Orange Fitness pode coletar as seguintes informações pessoais:</p>
+      <ul>
+        <li>Nome</li>
+        <li>Endereço de e-mail</li>
+        <li>Informações de contato</li>
+        <li>Informações de pagamento</li>
+      </ul>
 
-  </main>
-  <footer>
-    <section>
-        <img src="" alt="logotipo da academia">
-    </section>
-    <section>
+      <h2>Uso das Informações</h2>
+      <p>
+        As informações pessoais coletadas podem ser usadas para os seguintes
+        fins:
+      </p>
+      <ul>
+        <li>Processamento de pedidos e pagamentos</li>
+        <li>Envio de informações e atualizações</li>
+        <li>Responder a perguntas e solicitações</li>
+      </ul>
+
+      <h2>Proteção de Dados</h2>
+      <p>
+        O Orange Fitness está empenhado em proteger suas informações pessoais e
+        adota medidas de segurança adequadas para evitar o acesso não
+        autorizado, a divulgação ou a alteração dessas informações.
+      </p>
+
+      <h2>Divulgação a Terceiros</h2>
+      <p>
+        O Orange Fitness não compartilhará suas informações pessoais com
+        terceiros, a menos que seja necessário para o cumprimento de obrigações
+        legais ou para fornecer serviços solicitados por você.
+      </p>
+
+      <h2>Cookies</h2>
+      <p>
+        O site do Orange Fitness pode usar cookies para melhorar a experiência
+        do usuário. Você pode ajustar as configurações do seu navegador para
+        recusar cookies, se desejar.
+      </p>
+
+      <h2>Alterações na Política</h2>
+      <p>
+        O Orange Fitness se reserva o direito de fazer alterações nesta política
+        de privacidade a qualquer momento. As alterações serão publicadas nesta
+        página.
+      </p>
+
+      <h2>Contato</h2>
+      <p>
+        Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em
+        contato conosco através do seguinte endereço de e-mail:
+        <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a
+        >.
+      </p>
+    </main>
+    <footer>
+      <section>
+        <img src="" alt="logotipo da academia" />
+      </section>
+      <section>
         <h2>Siga a Orange Fitness</h2>
         <ul class="social-links">
-            <li><a href="https://www.facebook.com/orangefitness" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-            <li> <a href="https://www.instagram.comorangefitness" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-            <li><a href="https://www.twitter.com/orangefitness" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-            <li> <a href="https://www.linkedin.com/company/orangefitness" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+          <li>
+            <a
+              href="https://www.facebook.com/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.comorangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.twitter.com/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/company/orangefitness"
+              target="_blank"
+              rel="noopener noreferrer"
+              >LinkedIn</a
+            >
+          </li>
         </ul>
-    </section>
-    <section>
+      </section>
+      <section>
         <div>
-            <h2>Institucional</h2>
-            <ul>
-                <li><a href="./src/pages/sobre.html">Sobre a Academia</a></li>
-                <li><a href="./src/pages/termos.html">Termos de Uso</a></li>
-                <li><a href="./src/pages/politicas.html">Política de Privacidade</a></li>
-                <li><a href="./src/pages/faleConosco.html"></a></li>
-                <li><a href="./src/pages/faq.html">Perguntas Frequentes</a></li>
-            </ul>
+          <h2>Institucional</h2>
+          <ul>
+            <li><a href="./src/pages/sobre.html">Sobre a Academia</a></li>
+            <li><a href="./src/pages/termos.html">Termos de Uso</a></li>
+            <li>
+              <a href="./src/pages/politicas.html">Política de Privacidade</a>
+            </li>
+            <li><a href="./src/pages/faleConosco.html"></a></li>
+            <li><a href="./src/pages/faq.html">Perguntas Frequentes</a></li>
+          </ul>
         </div>
         <div>
-            <h2>Planos</h2>
-            <ul>
-                <li><a href="./src/pages/programas.html">Programas e Serviços</a></li>
-                <li><a href="./src/pages/inscricao.html">Matrícula</a></li>
-                <li><a href="./src/pages/contato.html">Contatos</a></li>
-            </ul>
+          <h2>Planos</h2>
+          <ul>
+            <li>
+              <a href="./src/pages/programas.html">Programas e Serviços</a>
+            </li>
+            <li><a href="./src/pages/inscricao.html">Matrícula</a></li>
+            <li><a href="./src/pages/contato.html">Contatos</a></li>
+          </ul>
         </div>
         <div>
-            <h2>Corporativo</h2>
-            <ul>
-                <li><a href="./src/pages/blog.html">Blog e Notícias</a></li>
-                <li><a href="./src/pages/depoimentos.html">Depoimentos</a></li>
-            </ul>
+          <h2>Corporativo</h2>
+          <ul>
+            <li><a href="./src/pages/blog.html">Blog e Notícias</a></li>
+            <li><a href="./src/pages/depoimentos.html">Depoimentos</a></li>
+          </ul>
         </div>
-    </section>
-    <p>&copy; 2023 Orange Fitness</p> 
-    <script src="../JS/script.js"></script>  
-</footer>
-</body>
+      </section>
+      <p>&copy; 2023 Orange Fitness</p>
+      <script src="../JS/script.js"></script>
+    </footer>
+  </body>
 </html>
