refinamento da navbar e background

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orange Fitness</title>
     <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Orange Fitness - Home</title>
+  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
-<body>
+<body style="background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(231,81,11,1))"
+class="bgblack text-primary">
     <header>
-        <img src="" alt="logo tipo da empresa">        
+        <img src="" alt="logotipo">        
         <nav>
             <ul>               
-                <li><a href="./src/pages/horario.html">Horário de Aulas</a></li>
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
-                <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
+                <li><a href="./src/pages/carrinho.html">Carrinho</a></li>
+                <li><a href="./src/pages/membros.html">Membros</a></li>
+                <li><a href="./src/pages/galeria.html">Galeria</a></li>
+                <li><a href="./src/pages/horario.html">Horários</a></li>    
             </ul>
         </nav>
     </header>
