fix navbar all project

--- a/src/pages/horario.html
+++ b/src/pages/horario.html
@@ -10,10 +10,11 @@
     <header>
         <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
         <nav>
-            <ul>                                 
-                <li><a href="./src/pages/galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./src/pages/membros.html">Área de Membros</a></li>               
-                <li><a href="./src/pages/carrinho.html">Carrinho de compra</a></li>
+            <ul>               
+                <li><a href="./src/pages/carrinho.html">Carrinho</a></li>
+                <li><a href="./src/pages/membros.html">Membros</a></li>
+                <li><a href="./src/pages/galeria.html">Galeria</a></li>
+                <li><a href="./src/pages/horario.html">Horários</a></li>    
             </ul>
         </nav>
     </header>
