--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Orange Fitness</title>
     <link rel="stylesheet" href="./src/CSS/style.css">
     <title>Orange Fitness - Home</title>
-  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../IMG/favicon.ico" type="image/x-icon">
 </head>
 <body style="background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(231,81,11,1))"
 class="bgblack text-primary">
